@@ -1,3 +1,8 @@
+2010-09-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/45595
+	* gfortran.dg/gomp/pr45595.f90: New test.
+
 2010-09-06  Dodji Seketeli  <dodji@redhat.com>
 
     	PR c++/45200
