@@ -1,3 +1,9 @@
+2010-09-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/45595
+	* openmp.c (resolve_omp_do): Report not enough do loops for
+	collapse even if block->next is NULL.
+
 2010-09-04  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/45530
